2025-04-27T01:23:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14686968346 # 626
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-27
* notice: last 14d: unq all: 1 6
* notice: prev accum: outdated-unq outdated-all / unq all: 137 379 / 139 387
* notice: next accum: outdated-unq outdated-all / unq all: 138 381 / 139 387
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-04-12] / []

2025-04-26T01:16:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14676186939 # 625
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-26
* notice: last 14d: unq all: 2 8
* notice: prev accum: outdated-unq outdated-all / unq all: 136 377 / 139 387
* notice: next accum: outdated-unq outdated-all / unq all: 137 379 / 139 387
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-04-11] / []

2025-04-25T01:19:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14654888168 # 624
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-25
* notice: last 14d: unq all: 3 10
* notice: prev accum: outdated-unq outdated-all / unq all: 135 373 / 139 387
* notice: next accum: outdated-unq outdated-all / unq all: 136 377 / 139 387
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-04-10] / []

2025-04-24T01:19:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14631325429 # 623