@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2025-04-27T01:23:53Z",
-  "count_outdated" : 381,
-  "uniques_outdated" : 138,
-  "count" : 387,
-  "uniques" : 139,
+  "timestamp" : "2025-09-30T01:17:30Z",
+  "count_outdated" : 387,
+  "uniques_outdated" : 139,
+  "count" : 388,
+  "uniques" : 140,
   "views" : [
     {
-      "timestamp": "2025-04-23T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 6, 6 ],
-      "count_decinc": [ 0, 6 ],
+      "timestamp": "2025-09-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
