@@ -1,10 +1,10 @@
 {
-  "count": 6,
+  "count": 1,
   "uniques": 1,
   "views": [
     {
-      "timestamp": "2025-04-23T00:00:00Z",
-      "count": 6,
+      "timestamp": "2025-09-29T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
